fix cart-info-box vertical spacing

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1162,7 +1162,11 @@ body {
 }
 
 .cart-info-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 25%;
+  height: 180px;
 }
 
 .cart-box {
@@ -1171,7 +1175,6 @@ body {
   flex-direction: column;
   gap: 4px;
 }
-
 
 .cart-item-img {
   width: 190px;
@@ -1196,9 +1199,8 @@ body {
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  min-height: 77px;
+  margin-bottom: 5px;
 }
-
 .cart-total-price {
   font-weight: 400;
   font-size: 16px;
